# i3lock

./: .clang-format  .gitignore  .travis.yml  CHANGELOG  I3LOCK_VERSION  LICENSE  Makefile  Makefile.am  README  README.md  README.md.old  blur.c  blur.h  blur_simd.c  build.sh  config.mk  configure.ac  cursors.h  dpi.c  dpi.h  explicit_bzero.c  explicit_bzero.h  flake.nix  fonts.h  i3lock-color.1  i3lock.1  i3lock.c  i3lock.h  i3lock.pam  i3lock.service.in  i3lock_ext.h  img_load.c  img_load.h  install-i3lock-color.sh  install.sh  jpg.c  jpg.h  keysym2ucs.c  keysym2ucs.h  lock.sh  (+17 more)
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  pull_request_template.md
.github/workflows/: Build Test.yml  ccpp.yml  main.yml
ci/: Dockerfile
debian/: changelog  control  copyright  i3lock.manpages  rules
include/: cursors.h  randr.h  unlock_indicator.h  xcb.h
m4/: ax_check_enable_debug.m4  ax_code_coverage.m4  ax_extend_srcdir.m4  ax_sanitizers.m4
meson/: meson-dist-script
patches/: wrong_pass_exec_upstream.patch  wrong_pass_exec_v2.6.patch  wrong_pass_exec_v2.7.patch
travis/: Dockerfile
